h1. Ripple Release Notes

h2. 4.0.0 Release

Support for Rails 5.0

h2. 3.1.0 Release

* Deprecate linked associations. All support for linked associations will be dropped in a future release.
* Switch back to [Riak Test Server](https://github.com/spreedly/riak_test_server) for local testing instead of Basho's defunct Vagrant virtual machine.

h2. 3.0.0 Major Release

Update to riak-ruby-client 2.x

* Update the riak-ruby-client dependency to 2.6.0 or above
* Switch to using Basho's [Riak Ruby Vagrant](https://github.com/basho-labs/riak-ruby-vagrant) virtual machine for local testing instead of a Docker instance.

The Riak Ruby Client 2.x series does a few major things:

* Supports making authenticated connections to Riak
* Drops support for HTTP connections to Riak
* Drops support for link walking (already no longer supported by Riak)

[Full Riak Ruby Client 2.x release notes](https://github.com/basho/riak-ruby-client/blob/master/RELNOTES.md#200-release---2014-09-05)

h2. 2.2.0 Rails 4.2 Upgrade

Updates for activemodel and activesupport related to Rails 4.2.

h2. 2.1.1 Patch Release

Strips out (broken) rake tasks.

h2. 2.1.0 Feature Release

Removes support for ripple.yml configuration; configure with `Ripple.config = {}`.

h2. 2.0.0 Major Release

This moves Ripple forward to support Rails 4.1, and drops support for a lot of functionality not used by Spreedly (search, observers, etc.)

h2. 0.9.5 Patch Release - 2011-06-14

Release 0.9.5 is a minor bugfix release but also includes some small features.

Full notes:

* Allow IO-like objects to be used as RObject data. [Josh Nichols]
* Set the content-length or transfer-encoding appropriately for Net::HTTP. Fixes #162.
* Fix MapReduce jobs on PBC when keep=false on certain phases. [Alexander Lang]
* Invalidate the key-cache for a bucket when streaming.
* Pass options through Document#all to Bucket#keys.
* Make Hash#to_param compatible with ActiveSupport. [Dave Perrett]