@@ -1,3 +1,3 @@
 module Ripple
-  VERSION = "4.0.0"
+  VERSION = "5.0.0"
 end
